unitycatalog-rs/src/clients/snapshots/unitycatalog_rs__clients__catalogs__tests__list.snap
---
source: src/clients/catalogs.rs
expression: list
---
Ok(
    ListCatalogResponse {
        catalogs: [
            CatalogInfo {
                name: Some(
                    "unity",
                ),
                comment: Some(
                    "Main catalog",
                ),
                properties: Some(
                    {},
                ),
                created_at: Some(
                    TIMESTAMP,
                ),
                updated_at: None,
                id: Some(
                    "PID",
                ),
            },
        ],
        next_page_token: None,
    },
)
