unitycatalog-rs/src/clients/snapshots/unitycatalog_rs__clients__catalogs__tests__not_found.snap
---
source: src/clients/catalogs.rs
expression: res
---
Err(
    CatalogNotFound(
        "mycatalog",
    ),
)
